Update manuals and prompt messages concerning compensation

--- a/travelsFront/app/templates/manager-manual.hbs
+++ b/travelsFront/app/templates/manager-manual.hbs
@@ -1,7 +1,7 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-      <h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
+      <h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>
       <p>
         Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Οι Αιτήσεις μου», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
         Εκεί θα πρέπει να επιλέξει το κουμπί "ΝΕΑ ΑΙΤΗΣΗ" και να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία)
@@ -28,10 +28,10 @@
     {{#paper-card-title-text}}
       <h4>Οι Αιτήσεις μου</h4>
       <p>
-        Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου. 
+        Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου.
         Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
       <ul>   
-         <li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li> 
+         <li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
         <li><b>Διαγραφή</b>: ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτησή του.</li>
         <li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
       </ul>  
@@ -61,16 +61,17 @@
       <h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
       <p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
       <ul>
-        <li><b>Ανέβασμα αρχείων</b>: ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα της μετακίνησης. Σε περίπτωση περισσότερων αρχείων (π.χ. ατζέντα, αποδεικτικό παρακολούθησης) μπορεί να ανεβάσει ένα αρχείο τύπου zip</li>
-        <li><b>Απολογισμός Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να καταγράψει τον απολογισμό της μετακίνησης.</li>
-        <li><b>Λοιπά Έξοδα Μετακίνησης</b>: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
+        <li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει σε ένα αρχείο τύπου zip που περιέχει κατ' ελάχιστον: (1) το πρόγραμμα και (2) τον απολογισμό της μετακίνησης σύμφωνα με το ( <a href="***REMOVED***">template</a> ). Το αρχείο zip πρέπει να είναι μεγέθους μέχρι 8 MB.</li>
+        <li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το σύνολο των εξόδων μετακίνησης, αθροίζοντας όλα τα εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
         <li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
       </ul>
       Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
+      <br><br>
+      Σημειώνεται ότι πριν την τελική υποβολή της Αίτησης Αποζημίωσης, ο μετακινούμενος θα πρέπει να κατεβάσει την Αίτηση Αποζημίωσης Μετακίνησης, μέσω της επιλογής που δίνεται από τη λίστα των αιτήσεων. Το συγκεκριμένο έγγραφο θα πρέπει να επισυνάπτεται πάντοτε στον φυσικό φάκελο με τα αποδεικτικά έγγραφα των εξόδων που προσκομίζεται στο Λογιστήριο.
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
-{{/paper-card}}    
+{{/paper-card}}
 
 {{#paper-card}}
   {{#paper-card-title}}
