--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -47,8 +47,8 @@
 			<h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
 			<p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
 			<ul>
-				<li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει το πρόγραμμα και τον απολογισμό της μετακίνησης ( <a href="***REMOVED***">template</a> ) σε ένα αρχείο τύπου zip με μέγιστο μέγεθος 8 MB.</li>
-				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το άθροισμα των εξόδων μετακίνησης. Πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
+				<li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει σε ένα αρχείο τύπου zip που περιέχει κατ' ελάχιστον: (1) το πρόγραμμα και (2) τον απολογισμό της μετακίνησης σύμφωνα με το ( <a href="***REMOVED***">template</a> ). Το αρχείο zip πρέπει να είναι μεγέθους μέχρι 8 MB.</li>
+				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το σύνολο των εξόδων μετακίνησης, αθροίζοντας όλα τα εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
 				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
 			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
