--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -21,7 +21,7 @@
             {{/paper-content}}
             {{#menu-item onClick=(transition-to "profile")}}{{t 'profile.tab'}}{{/menu-item}}
             {{#menu-item onClick=(transition-to "password")}}{{t 'password.change.tab'}}{{/menu-item}}
-            {{#unless (or (can "approve petition") (can "compensate petition")  (can "managerApprove petition") (can "view petition"))}}
+            {{#unless (or (can "approve petition") (can "compensate petition") (can "managerApprove petition") (can "presidentApprove petition") (can "view petition"))}}
               {{#menu-item onClick=(transition-to "userPetition" "new")}}{{t 'new_petition.tab'}}{{/menu-item}}
               {{#menu-item onClick=(transition-to "petitionList")}}{{t 'my_petitions.tab'}}{{/menu-item}}
             {{/unless}}
@@ -34,6 +34,9 @@
             {{/if}}
             {{#if (can "view petition")}}
               {{#menu-item onClick=(transition-to "advancedList")}}{{t 'petitions_list.tab'}}{{/menu-item}}
+            {{/if}}
+            {{#if (can "presidentApprove petition")}}
+              {{#menu-item onClick=(transition-to "president-list")}}{{t 'manager_petitions_list.tab'}}{{/menu-item}}
             {{/if}}
             {{#if (can "managerApprove petition")}}
               {{#menu-item onClick=(transition-to "petitionList")}}{{t 'my_petitions.tab'}}{{/menu-item}}
