--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -64,11 +64,11 @@
 {{#row.cell}}{{petition.first_name}}{{/row.cell}}
 {{#row.cell}}{{petition.last_name}}{{/row.cell}}
 {{#row.cell}}{{petition.project.name}}{{/row.cell}}
-{{#row.cell}}{{petition.travel_info.firstObject.arrival_point.name}}{{/row.cell}}
+{{#row.cell}}{{petition.travel_info.lastObject.arrival_point.name}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.created}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.updated}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.travel_info.firstObject.depart_date}}{{/row.cell}}
-{{#row.cell}}{{to-date petition.travel_info.firstObject.return_date}}{{/row.cell}}
+{{#row.cell}}{{to-date petition.travel_info.lastObject.return_date}}{{/row.cell}}
 {{#row.cell}}{{petition.status_label}}{{/row.cell}}
 {{#row.cell}}{{petition.total_cost}}{{/row.cell}}
 {{/component}}
