--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -7,6 +7,9 @@
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
     {{list-action action=(action "pdf" petition "1") icon='file_download' tooltip-message=(t 'pdf_travel_application') iconButton=true confirm=false}}
     {{list-action action=(action "pdf" petition "2") icon='file_download' tooltip-message=(t 'pdf_travel_decision') iconButton=true confirm=false}}
+    {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'travel_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
+  {{else if (eq petition.status 5)}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_approve_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{else if (can "presidentApprove petition")}}
   {{#if (eq petition.status 4)}}
