--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -34,6 +34,8 @@
               approve="presidentApproval"
               managerApproval="managerApproval"
               managerCostApproval="managerCostApproval"
+              withdraw="petitionWithdraw"
+              withdrawCancel="petitionWithdrawCancel"
               wrapper=body.row}}
           {{/if}}
         {{/each}}
