Add total_cost_manual & total_cost_change_reason in controller's form

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -82,5 +82,5 @@
 {{#row.cell}}{{to-date petition.travel_info.firstObject.depart_date}}{{/row.cell}}
 {{#row.cell}}{{to-date petition.travel_info.lastObject.return_date}}{{/row.cell}}
 {{#row.cell}}{{petition.status_label}}{{/row.cell}}
-{{#row.cell}}{{petition.total_cost}}{{/row.cell}}
+{{#row.cell}}{{petition.total_cost_calculated}}{{/row.cell}}
 {{/component}}
