--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -116,12 +116,12 @@
 		<td><b>Σύνολο</td>
 		<td><b>{{total_cost}} ευρώ </b></td>
 	</tr>
-	{% if is_total_manual_cost_set %}
-		<tr>
-			<td><i><b>Τροποποιημένη τιμή αποζημίωσης</td>
-			<td><b>{{total_cost_change_reason}}</b></td>
-		</tr>
-	{% endif %}
+	<!--{% if is_total_manual_cost_set %}-->
+		<!--<tr>-->
+			<!--<td><i><b>Τροποποιημένη τιμή αποζημίωσης</td>-->
+			<!--<td><b>{{total_cost_change_reason}}</b></td>-->
+		<!--</tr>-->
+	<!--{% endif %}-->
 
 </table>
 
