Extend compensation calculations to include payment ways

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -155,6 +155,18 @@
 			<td>Έξοδα μετακίνησης προς αποζημίωση</td>
 			<td>{{transportation_compensation}} ευρώ</td>
 		</tr>
+		{% if travel_info_with_visa_accommodation_payment %}
+			<tr>
+				<td>Έξοδα διανυκτέρευσης προς αποζημίωση</td>
+				<td>{{overnights_to_be_compensated}} ευρώ</td>
+			</tr>
+		{% endif %}
+		{% if participation_payment_way == 'VISA' %}
+			<tr>
+				<td>Κόστος συμμετοχής προς αποζημίωση</td>
+				<td>{{participation_cost}} ευρώ</td>
+			</tr>
+		{% endif %}
 		<tr>
 			<td>Λοιπά έξοδα μετακίνησης</td>
 			<td>{{additional_expenses}} ευρώ</td>
