Apply custom css class to list row
based on the value of the following vars:
- timesheeted
- withdrawn

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -243,3 +243,11 @@ table.responsive {
   font-size: 16px;
   text-transform: capitalize;
 }
+
+.timesheeted {
+  background-color: plum !important;
+}
+
+.withdrawn {
+  background-color: lightsteelblue !important;
+}
