--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -14,6 +14,7 @@
             {{#menu-item onClick=(transition-to "login")}}{{t 'login.tab'}}{{/menu-item}}
             {{#menu-item onClick=(transition-to "signup")}}{{t 'signup.tab'}}{{/menu-item}}
             {{#menu-item onClick=(transition-to "help")}}{{t 'help.tab'}}{{/menu-item}}
+            {{#menu-item onClick=(transition-to "reset-password")}}{{t 'reset-password.tab'}}{{/menu-item}}
         {{else}}
             {{#paper-content classNames='login-info layout-padding layout-row'}}
                 {{#paper-content classNames="user-label" flex="80" padding=1 }}{{t 'logged_in_as.title'}}{{ account.user.username }}{{/paper-content}}
