Update reset-password instructions

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -251,3 +251,8 @@ table.responsive {
 .withdrawn {
   background-color: lightsteelblue !important;
 }
+
+#resetPassword {
+  text-decoration: none;
+  color: black;
+}
