--- a/travelsFront/app/templates/help.hbs
+++ b/travelsFront/app/templates/help.hbs
@@ -15,5 +15,6 @@
     {{partial 'president-manual'}}
   {{else}}
     {{partial 'user-manual'}}
+    {{partial 'reset-password'}}
   {{/if}}
 {{/paper-content}}
