--- a/travelsFront/app/templates/reset-password.hbs
+++ b/travelsFront/app/templates/reset-password.hbs
@@ -3,13 +3,10 @@
     {{#paper-card-title-text}}
       <h4>Υπενθύμιση κωδικού πρόσβασης</h4>
       <p>
-      Ο χρήστης έχει τη δυνατότητα να προβεί σε υπενθύμιση του κωδικού πρόσβασης στο σύνδεσμο που ακολουθεί, συμπληρώνοντας το email που έχει δηλώσει στην εφαρμογή:
+      Μπορείτε να προβείτε σε υπενθύμιση του κωδικού πρόσβασης επιλέγοντας την καρτέλα «Υπενθύμιση Κωδικού Πρόσβασης» συμπληρώνοντας το email που έχετε δηλώσει στην εφαρμογή.
       <br/>
-      <ul>
-        <li><a href="https://travel.admin.grnet.gr/api/auth/password/reset/">Υπενθύμιση κωδικού πρόσβασης</a></li>
-      </ul>
-      <br/> 
-      Στη συνέχεια, θα του σταλεί email με το link δημιουργίας του νέου κωδικού.
+      <br/>
+      Στη συνέχεια, θα σας σταλεί email με το link δημιουργίας του νέου κωδικού.
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
