Change the color of the withdrawn list row

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -249,7 +249,7 @@ table.responsive {
 }
 
 .withdrawn {
-  background-color: lightsteelblue !important;
+  background-color: khaki !important;
 }
 
 #resetPassword {
