Change the color of travel-info label
in case of multiple destinations

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -244,6 +244,10 @@ table.responsive {
   text-transform: capitalize;
 }
 
+.destination-label.md-accent.md-raised {
+  background-color: color('pink', '700') !important;
+}
+
 .timesheeted {
   background-color: plum !important;
 }
