Add accommodation_total_cost to TravelInfo model

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -101,7 +101,7 @@
 	</tr>
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_sum_cost_string}} = {{overnights_sum_cost}} ευρώ</td>
+		<td>{{overnights_sum_cost_string}} ευρώ</td>
 
 	</tr>
 	<tr>
