--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -116,7 +116,7 @@
 		</tr>
 		<tr>
 			<td>Διανυκτέρευση</td>
-			<td>{{overnights_sum_cost_string}} = {{overnights_sum_cost}} ευρώ </td>
+			<td>{{overnights_sum_cost_string}} ευρώ </td>
 		</tr>
 		<tr>
 			<td>Ημερήσια Αποζημίωση</td>
