--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -65,7 +65,7 @@
 		<td>Ενδιάμεσοι προορισμοί</td>
 		{% for travel_obj in travel_info %}
 		<tr>
-			<td>Από (ημ/νια {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
+			<td>Από (ημ/νία {{travel_obj.depart_date|date:"d/m/Y"}}):</td>
 			<td>{{travel_obj.departure_point}}</td>
 			<td>Προς:</td>
 			<td>{{travel_obj.arrival_point}}</td>
@@ -101,7 +101,7 @@
 	</tr>
 	<tr>
 		<td>Διανυκτέρευση</td>
-		<td>{{overnights_sum_cost_string}} ευρώ</td>
+		<td>{{overnights_sum_cost_string}}</td>
 
 	</tr>
 	<tr>
