Make app bilingual
* user can select between greek and english

--- a/travelsFront/app/templates/application.hbs
+++ b/travelsFront/app/templates/application.hbs
@@ -1,3 +1,4 @@
+{{language-select}}
 {{#gen-app siteTitle="Travel Expenses" siteSubtitle="powered by Grnet" siteIcon="flight"}}
     {{outlet}}
 {{/gen-app }}
