--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -61,3 +61,21 @@ $withdrawn-color:  color($color-red, '600');
 .nowrap {
   white-space: nowrap;
 }
+
+.language-select {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 100;
+  a {
+    padding: 5px;
+    text-decoration: none;
+  }
+  @media('min-width: 960px') {
+    right: auto;
+    top: 10px;
+    left: 10px;
+    bottom: auto;
+  }
+}
+
