--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -79,3 +79,33 @@ $withdrawn-color:  color($color-red, '600');
   }
 }
 
+.earth {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  z-index: 200;
+  position: absolute;
+  margin: 40px 20px 10px 10px;
+  @media('max-width: 960px') {
+    display: none;
+  }
+}
+
+.earth > div {
+  width: 200%;
+  height: 100%;
+  animation: spin 10s linear alternate infinite;
+  background-image: url('worldMap.png');
+  background-size: cover;
+  background-color: #ebeef0;
+  @media('max-width: 960px') {
+    display: none;
+  }
+}
+
+@keyframes spin {
+  to {
+     transform: translateX(-50%);
+  }
+}
