--- a/travelsFront/app/templates/application.hbs
+++ b/travelsFront/app/templates/application.hbs
@@ -1,4 +1,7 @@
 {{language-select}}
-{{#gen-app siteTitle="Travel Expenses" siteSubtitle="powered by Grnet" siteIcon="flight"}}
-    {{outlet}}
+  <p class="earth">
+    <div></div>
+  </p>
+{{#gen-app siteTitle="Travel Expenses" siteSubtitle="powered by Grnet"}}
+  {{outlet}}
 {{/gen-app }}
