--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -70,6 +70,8 @@ $withdrawn-color:  color($color-red, '600');
   a {
     padding: 5px;
     text-decoration: none;
+    color: #ebeef0;
+    font-size: small;
   }
   @media('min-width: 960px') {
     right: auto;
