Fix general guide template name

--- a/travelsFront/app/templates/guideline.hbs
+++ b/travelsFront/app/templates/guideline.hbs
@@ -4,7 +4,7 @@
   {{#page.content}}
     <md-content>
       {{#paper-content class="md-padding"}}
-        {{ partial '_general-guide' }}
+        {{ partial '_general_guide' }}
       {{/paper-content}}
     </md-content>
   {{/page.content}}
