Update user related guides

--- a/travelsFront/app/templates/_user_manual.hbs
+++ b/travelsFront/app/templates/_user_manual.hbs
@@ -3,19 +3,19 @@
     {{#paper-card-title-text}}
       <h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>
       <p>
-        Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
-        Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία)
+        Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Λίστα Αιτήσεων», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
+        Εκεί θα πρέπει να επιλέξει το κουμπί «Δημιουργία» και να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία)
       <ul>
-        <li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών) *</li>
+        <li>Έργο (Λίστα Επιλογών) *</li>
         <li>Αιτιολογία Μετακίνησης *</li>
-        <li>Τόπος Αναχώρησης - Από *</li>
-        <li>Τόπος Προορισμού - Προς* </li>
         <li>Έναρξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
         <li>Λήξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+        <li>Τόπος Αναχώρησης - Από *</li>
+        <li>Τόπος Προορισμού - Προς* </li>
         <li>Αναχώρηση (συμπληρώνεται στην τοπική ώρα της πόλης αναχώρησης)</li>
         <li>Επιστροφή (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
         <li>Κόστος Συμμετοχής - Τοπικό Νόμισμα: έξοδα συμμετοχής σε συνέδρια, ημερίδες κτλ. (συμπληρώνονται στο τοπικό νόμισμα της χώρας προορισμού)</li>
-        <li>Αρχικές Προτάσεις Μετακινούμενου</li>
+        <li>Αρχικές Προτάσεις Μετακινούμενου (για κρατήσεις πτήσεων, ξενοδοχείου, κλπ)</li>
       </ul>
         Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
         <br><br>
@@ -29,13 +29,13 @@
     {{#paper-card-title-text}}
       <h4>Λίστα Αιτήσεων</h4>
       <p>
-        Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου. 
-        Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
+        Από την καρτέλα «Λίστα Αιτήσεων», ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
       <ul>
-         <li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
-        <li><b>Διαγραφή</b>: ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτησή του.</li>
-        <li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
-      </ul>  
+          <li><b>Προβολή</b></li>
+        <li><b>Επεξεργασία ή Υποβολή</b>: εφόσον η αίτηση βρίσκεται σε κατάσταση «Σε επεξεργασία από τον μετακινούμενο» </li>
+        <li><b>Διαγραφή</b>: εφόσον η αίτηση βρίσκεται σε κατάσταση «Σε επεξεργασία από τον μετακινούμενο»</li>
+        <li><b>Αναίρεση της υποβολής</b>: εφόσον έχει υποβληθεί η αίτηση και δεν έχει ξεκινήσει η επεξεργασία της από τη Γραμματεία</li>
+      </ul> 
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -51,9 +51,9 @@
         <li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το σύνολο των εξόδων μετακίνησης, αθροίζοντας όλα τα εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
         <li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
       </ul>
-      Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
+      Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. 
       <br><br>
-      Σημειώνεται ότι πριν την τελική υποβολή της Αίτησης Αποζημίωσης, ο μετακινούμενος θα πρέπει να κατεβάσει την Αίτηση Αποζημίωσης Μετακίνησης, μέσω της επιλογής που δίνεται από τη λίστα των αιτήσεων. Το συγκεκριμένο έγγραφο θα πρέπει να επισυνάπτεται πάντοτε στον φυσικό φάκελο με τα αποδεικτικά έγγραφα των εξόδων που <b>θα πρέπει</b> να προσκομίσετε στο Λογιστήριο.
+      Σημειώνεται ότι ο μετακινούμενος θα πρέπει να κατεβάσει την Αίτηση Δαπάνης Μετακίνησης, μέσω της επιλογής που δίνεται από τη λίστα των αιτήσεων. Το συγκεκριμένο έγγραφο θα πρέπει να επισυνάπτεται πάντοτε στον φυσικό φάκελο με τα αποδεικτικά έγγραφα των εξόδων που <b>θα πρέπει</b> να προσκομίσει στο Λογιστήριο.
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -68,7 +68,7 @@
       εκτελέσει ο μετακινούμενος ανάλογα με την κατάσταση της αίτησης:
       </p>
       <div class="container">
-      <table class="manualTable"> 
+        <table class="manualTable"> 
         <thead>
           <tr>
             <th>Κατάσταση</th>
@@ -77,7 +77,7 @@
           </tr>
         </thead>
         <tbody>
-           <tr>
+          <tr>
             <td>1</td>
             <td>Σε επεξεργασία από τον μετακινούμενο</td>
             <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής,  Διαγραφή</td>
@@ -100,7 +100,7 @@
           <tr>
             <td>5</td>
             <td>Απόφαση Μετακίνησης υπογεγραμμένη από Πρόεδρο</td>
-            <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολήςς, Εξαγωγή Αρχείου</td>
+            <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής, Εξαγωγή Αρχείου</td>
           </tr>
           <tr>
             <td>6</td>
