--- a/travelsFront/app/templates/contact.hbs
+++ b/travelsFront/app/templates/contact.hbs
@@ -7,9 +7,8 @@
         {{#paper-card}}
           {{#paper-card-title}}
             {{#paper-card-title-text}}
-              <h4>Επικοινωνία</h4>
-              <p>
-              Για οποιαδήποτε απορία ή διευκρίνιση, μπορείτε να επικοινωνήσετε μαζί μας στην παρακάτω διεύθυνση ηλεκτρονικού ταχυδρομείου:
+              <h4>{{t 'contact-us'}}</h4>
+              <p>{{t 'contact-text'}}
               <br/>
               <br/>
               <a href="mailto:travel.helpdesk@lists.grnet.gr">travel.helpdesk@lists.grnet.gr</a>
